Bump to java 16 (#13)
* Bumped java v, some pom cleanup

* Java 16 changes and some tests

* Scheduling,
More tests

Co-authored-by: jaivalis <john@axual.io>