@@ -8,26 +8,36 @@ import com.raccoon.exception.ReleaseScrapeException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.transaction.UserTransaction;
 
+import io.quarkus.scheduler.Scheduled;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @ApplicationScoped
 public class ReleaseScrapingService {
 
-    @Inject
     ReleaseScrapers releaseScrapers;
-
-    @Inject
     UserTransaction userTransaction;
+    UserArtistRepository userArtistRepository;
 
     @Inject
-    UserArtistRepository userArtistRepository;
+    ReleaseScrapingService(final ReleaseScrapers releaseScrapers,
+                           final UserTransaction userTransaction,
+                           final UserArtistRepository userArtistRepository) {
+        this.releaseScrapers = releaseScrapers;
+        this.userTransaction = userTransaction;
+        this.userArtistRepository = userArtistRepository;
+    }
+
+    @Scheduled(cron="{release.scrape.cron.expr}")
+    public void releaseScrapeCronJob() throws ReleaseScrapeException, InterruptedException {
+        log.info("Release scrape cronjob triggered");
+        scrape();
+    }
 
     public Set<Release> scrape() throws ReleaseScrapeException, InterruptedException {
         try {
@@ -40,7 +50,7 @@ public class ReleaseScrapingService {
 
             return releases;
         } catch (InterruptedException e) {
-            log.warn("Interrupted!", e);
+            log.warn("Scrape interrupted.", e);
             throw e;
         } catch (Exception e) {
             throw new ReleaseScrapeException("Exception thrown while scraping releases.", e);
@@ -48,9 +58,12 @@ public class ReleaseScrapingService {
     }
 
     private void updateHasNewRelease(Collection<Release> releases) {
-        Collection<Long> artistIds = releases.stream()
-                .flatMap(release -> release.getArtists().stream().map(artist -> artist.id))
-                .collect(Collectors.toList());
+        List<Long> artistIds = releases.stream()
+                .flatMap(release ->
+                        release.getArtists()
+                                .stream()
+                                .map(artist -> artist.id)
+                ).toList();
         List<UserArtist> userArtists = userArtistRepository.markNewRelease(artistIds);
         log.info("Updated {} UserArtists.", userArtists.size());
     }
